# bobfilez

./: .borg_startup_marker  .gitignore  .gitmodules  .hypercode-session.json  .tormentnexus_startup_marker  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEPLOY.md  EXPLORER_PLAN.md  FILE_ORGANIZER_SKILL.md  FUZZ_RESULTS.md  GEMINI.md  GPT.md  HANDOFF.md  IDEAS.md  MEMORY.md  OpenFileOrganizer.cpp  OpenFileOrganizer.sln  OpenFileOrganizer.ui.bak  OpenFileOrganizer.vcxproj  OpenFileOrganizer.vcxproj.bak  OpenFileOrganizer.vcxproj.bak2  OpenFileOrganizer.vcxproj.filters  README.md  README_CLI.md  ROADMAP.md  SUBMODULE_INVENTORY.md  TODO.md  benchmark_results.txt  bobfilez.h  bobfilez.qrc  bobfilez.sln  bobfilez.ui  bobfilez.vcxproj  build.bat  build_appimage.sh  build_fuzz_log.txt  (+33 more)
cli/: CMakeLists.txt  cmd_lint.cpp  fo_cli.cpp
cli/build_output/: CMakeCache.txt
core/: CMakeLists.txt
core/build_output/: CMakeCache.txt
core/c_api/: bobfilez_c_api.cpp
core/include/fo/c_api/: bobfilez_c_api.h
core/include/fo/core/: audio_fingerprint_interface.hpp  audit_logger_interface.hpp  auto_cleanup_manager.hpp  autonomous_dev_protocol_interface.hpp  autonomous_sync_interface.hpp  batch_rename_interface.hpp  clip_search_interface.hpp  cloud_provider_interface.hpp  conversion_interface.hpp  data_pruner_interface.hpp  database.hpp  document_embedder_interface.hpp  engine.hpp  enhanced_fileops_interface.hpp  file_watcher_interface.hpp  fileops_interface.hpp  hex_editor_interface.hpp  hierarchy_engine_interface.hpp  image_viewer_interface.hpp  interfaces.hpp  lint_interface.hpp  markdown_viewer_interface.hpp  neural_bridge_interface.hpp  nexus_interface.hpp  omni_graph_interface.hpp  omni_mount_interface.hpp  omni_oracle_interface.hpp  omniclerk_interface.hpp  (+31 more)
core/src/: advanced_archive_manager.cpp  audio_fingerprint_chromaprint.cpp  audit_logger.cpp  auto_cleanup_manager.cpp  autonomous_dev_protocol_service.cpp  autonomous_sync_service.cpp  batch_rename_engine.cpp  classifier_onnx.cpp  clip_search_engine.cpp  cloud_provider.cpp  conversion_engine.cpp  data_pruner.cpp  database.cpp  document_embedder.cpp  dupe_size_fast.cpp  duplicate_finders.cpp  engine.cpp  enhanced_fileops.cpp  export.cpp  file_repository.cpp  file_watcher.cpp  hex_editor.cpp  hierarchy_engine.cpp  image_viewer.cpp  linter_std.cpp  markdown_viewer.cpp  neural_bridge.cpp  nexus.cpp  omni_graph.cpp  omni_mount.cpp  omni_oracle.cpp  omniaudio_engine.cpp  omniclerk_engine.cpp  omnicluster_engine.cpp  omnicrypt_engine.cpp  omniflow_engine.cpp  omnigit_engine.cpp  omnipeek_engine.cpp  omnisec_engine.cpp  omnishare_engine.cpp  (+23 more)
core/src/providers/: azure_blob_scanner.cpp  azure_blob_scanner_reg.cpp  gdrive_scanner.cpp  gdrive_scanner_reg.cpp  register_all_providers.cpp  s3_scanner.cpp  s3_scanner_reg.cpp  vault_manager_reg.cpp
frontends/bobgui_app/: main.c  meson.build  meson_options.txt
frontends/bobui/: CMakeLists.txt
frontends/bobui/assets/: Main.qml  bobui_demo.qrc
frontends/bobui/src/: QmlEngineWrapper.cpp  QmlEngineWrapper.hpp  main.cpp
frontends/btk/: CMakeLists.txt
frontends/btk/src/: DemoWindow.cpp  DemoWindow.hpp  main.cpp
frontends/juce/: CMakeLists.txt
frontends/juce/src/: main.cpp
frontends/qt/: CMakeLists.txt
frontends/qt/src/: main.cpp
fuzz/: CMakeLists.txt  fuzz_rule_engine.cpp
fuzz/build_output/: CMakeCache.txt
gui/: CMakeLists.txt  mainwindow.cpp
gui/build_output/: CMakeCache.txt
gui/omni/: CMakeLists.txt
gui/omni/assets/: AcrylicBackground.qml  Dashboard.qml  DashboardShell.qml  DesktopIcons.qml  ExplorerShell.qml  ExplorerWindow.qml  NexusPulse.qml  OmniPeekOverlay.qml  StartMenu.qml  Taskbar.qml  WindowManager.qml  main.qml  qml.qrc
gui/omni/src/: FileModel.cpp  FileModel.h  NativeMarkdownView.cpp  NativeMarkdownView.h  NativeUiBootstrap.cpp  NativeUiBootstrap.hpp  NativeUiLaunchConfig.cpp  NativeUiLaunchConfig.hpp  NativeUiLaunchProfile.cpp  NativeUiLaunchProfile.hpp  NativeUiProfileRegistry.cpp  NativeUiProfileRegistry.hpp  NativeUiRuntime.cpp  NativeUiRuntime.hpp  NativeUiRuntimeBundle.cpp  NativeUiRuntimeBundle.hpp  OmniQmlRegistration.cpp  OmniQmlRegistration.hpp  TreemapModel.cpp  TreemapModel.h  main.cpp
gui/panels/: AssetManagerPanel.qml  AutonomousMonitoringPanel.qml  BatchConvertPanel.qml  BatchRenamePanel.qml  CloudPanel.qml  DigitalRotPanel.qml  EnhancedFileOpsPanel.qml  FileOpsPanel.qml  FileWatcherPanel.qml  ForensicPanel.qml  GamificationPanel.qml  HexEditorPanel.qml  HierarchyPanel.qml  ImageViewerPanel.qml  MarkdownViewerPanel.qml  NetworkPanel.qml  NotaryPanel.qml  OmniAudioPanel.qml  OmniClerkPanel.qml  OmniClusterPanel.qml  OmniCryptPanel.qml  OmniFlowPanel.qml  OmniGitPanel.qml  OmniGraphPanel.qml  OmniMountPanel.qml  OmniSecPanel.qml  OmniSharePanel.qml  OmniTerminalPanel.qml  OmniVersePanel.qml  OmniVisionPanel.qml  OraclePanel.qml  PhotoDevelopPanel.qml  PhotoLibraryPanel.qml  RecoveryPanel.qml  SearchPanel.qml  SwarmPanel.qml  TimeMachinePanel.qml  TopologyPanel.qml  VaultPanel.qml  VisualDedupPanel.qml
tests/: CMakeLists.txt  _clean_pybind11.ps1  c_api_smoke.c  mock_cloud_scanners.py  test_archive.cpp  test_audit_logger.cpp  test_autodev_comprehensive.cpp  test_autonomous_dev_protocol.cpp  test_autonomous_protocol_e2e.cpp  test_autonomous_sync.cpp  test_batch_rename.cpp  test_c_api.cpp  test_cloud_metadata_neural.cpp  test_conversion_clip_dedup.cpp  test_database.cpp  test_distributed_sync.cpp  test_dupe_finder_imageviewer.cpp  test_engine_integration.cpp  test_enhanced_fileops.cpp  test_export.cpp  test_file_watcher.cpp  test_hex_editor.cpp  test_ingestion_pipeline.cpp  test_integration.cpp  test_linter.cpp  test_markdown_viewer.cpp  test_nexus_cleanup.cpp  test_omni_remote.cpp  test_omniclerk_watcher.cpp  test_omniflow.cpp  test_omniflow_extra.cpp  test_operation_repository.cpp  test_performance_monitor.cpp  test_pii_virtualfs_time.cpp  test_repositories.cpp  test_rule_engine.cpp  test_scanner.cpp  test_search_engine.cpp  test_session_healing_hierarchy.cpp  test_shadow_sorter_copy.cpp  (+3 more)
tests/build_output/: CMakeCache.txt
(+7966 files in other folders)
